--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "decluttaking-mobileapp",
   "main": "expo-router/entry",
-  "type": "module",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -16,13 +15,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/config": "~9.0.0",
     "@expo/metro-config": "^0.18.11",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.24",
     "expo-splash-screen": "^0.27.7",
@@ -33,10 +36,13 @@
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
