--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/metro-config": "^0.18.11",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.39",
@@ -38,8 +39,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-native": "0.74.5",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
