--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-phone-input": "^1.3.7",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
