--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^7.0.3",
     "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -41,6 +42,7 @@
     "react-native": "0.74.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
