--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "decluttaking-mobileapp",
   "main": "expo-router/entry",
-  "type": "module",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -44,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.9.0",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
