--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.6.1",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
@@ -51,6 +52,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
