--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.10.1",
     "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10"
