--- a/app.json
+++ b/app.json
@@ -7,6 +7,11 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#483A2D"
+    },
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
