update major screens and auth

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-EXPO_PUBLIC_API_KEY=http://localhost:8081
+EXPO_PUBLIC_API_KEY=http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
+
+user ID: 67965df4854df5e62aacdd27
