--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.0.3",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.0",
     "axios": "^1.7.7",
     "expo": "^52.0.0",
     "expo-auth-session": "~6.0.1",
@@ -58,7 +61,9 @@
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -66,6 +71,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/redux-persist": "^4.3.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
