--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
-    "react-native": "0.76.5",
+    "react-native": "^0.75.3",
     "react-native-blur": "^3.2.2",
     "react-native-blur-overlay": "^2.0.1",
     "react-native-country-picker-modal": "^2.0.0",
