Ni abd Bvn idenitiy check

--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
 EXPO_PUBLIC_API_KEY=http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
 
-user ID: 67965df4854df5e62aacdd27
+PREMBLY_BASE_URL=https://api.prembly.com/
+PREMBLY_SDK_TEST_KEY=sandbox_pk_GipNsaSueAEvfCOEwjvDW8IcPfDPXsXiS5qFUvG
+PREMBLY_API_TEST_KEY=sandbox_sk_9nFHRphGxcnyF57CIOdg90zxzFQDxAye8P2zFES
+
+# user ID: 67965df4854df5e62aacdd27
+
+# dc74fbe9-bbe9-4c21-bb2d-e920aa980336
+# live_pk_E9RdleBxW87j4bEpEY5Xc571yfEaZ0WGOMm7Q5G
+# live_sk_MbUN0mj2Pkc1QNfhbiVXRNJ2qnsYzHeRkKJuDYv
+# live_pk_E9RdleBxW87j4bEpEY5Xc571yfEaZ0WGOMm7Q5G
+# dc74fbe9-bbe9-4c21-bb2d-e920aa980336
