--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "expo": {
     "name": "DecluttaKing",
-    "slug": "DecluttaKing",
+    "slug": "DecluttaKing", 
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "permissions": ["CAMERA"],
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
