--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.0.3",
@@ -51,6 +51,7 @@
     "react-native-blur-overlay": "^2.0.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-identity-kyc": "1.0.8",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.5.1",
@@ -65,8 +66,10 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.13.2",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
