--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EXPO_PUBLIC_API_KEY=http://localhost:3000
+EXPO_PUBLIC_API_KEY=https://30cd-102-89-85-250.ngrok-free.app
+http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
 
 PREMBLY_BASE_URL=https://api.prembly.com/
