--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-pager-view": "6.5.1",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
