--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -20,7 +20,6 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.14",
@@ -45,27 +44,23 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
-    "react-native": "^0.75.3",
-    "react-native-blur-overlay": "^2.0.1",
+    "react-native": "0.76.7",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.5.1",
-    "react-native-phone-input": "^1.3.7",
-    "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.7",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.13.2",
+    "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
