update all auth screens

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EXPO_PUBLIC_API_KEY=https://decluttakingsever.onrender.com
+EXPO_PUBLIC_API_KEY=https://1e44-102-89-69-133.ngrok-free.app
+# https://decluttakingsever.onrender.com
 # http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
 
