--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-local-authentication": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
