--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_KEY=https://5a30-102-89-76-21.ngrok-free.app
+EXPO_PUBLIC_API_KEY=https://f17a-102-89-68-48.ngrok-free.app
 # https://decluttakingsever.onrender.com
 # http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
