--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.0.3",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.69.0",
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.0",
     "axios": "^1.7.7",
     "expo": "^52.0.0",
     "expo-auth-session": "~6.0.1",
+    "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-local-authentication": "~15.0.2",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -61,9 +64,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1",
-    "expo-local-authentication": "~15.0.2",
-    "expo-checkbox": "~4.0.1"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
