--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.14",
@@ -29,6 +30,7 @@
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.0",
     "axios": "^1.7.7",
+    "decluttaking-mobileapp": "file:",
     "expo": "^52.0.0",
     "expo-auth-session": "~6.0.1",
     "expo-checkbox": "~4.0.1",
@@ -48,11 +50,13 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-native": "0.76.7",
+    "react-native-checkbox": "^2.0.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.5.1",
+    "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
