--- a/.env
+++ b/.env
@@ -58,7 +58,7 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_CERT_URL=your_cert_url
 
-EXPO_PUBLIC_API_KEY=http://localhost:3000
+EXPO_PUBLIC_API_KEY="https://decluttakingsever.onrender.com"
 # https://decluttakingsever.onrender.com 
 # http://localhost:3000 
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com 
