--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
+    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "~15.0.2",
@@ -44,6 +45,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
     "lottie-ios": "4.5.0",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
@@ -69,7 +71,8 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
