--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_KEY=https://decluttakingsever-vcs7.onrender.com/
+EXPO_PUBLIC_API_KEY=https://decluttakingsever-vcs7.onrender.com
 # https://decluttakingsever.onrender.com 
 # https://decluttakingsever-vcs7.onrender.com
 # http://localhost:3000
