--- a/.env
+++ b/.env
@@ -59,7 +59,7 @@ FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_CERT_URL=your_cert_url
 
 EXPO_PUBLIC_API_KEY="https://decluttakingsever-vcs7.onrender.com"
-EXPO_PUBLIC_API_KEY=https://decluttakingsever-vcs7.onrender.com
+# EXPO_PUBLIC_API_KEY=https://decluttakingsever-vcs7.onrender.com
 # https://decluttakingsever.onrender.com 
 # https://decluttakingsever-vcs7.onrender.com
 # http://localhost:3000
