--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
-    "yup": "^1.6.1",
-    "expo-dev-client": "~5.0.20"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
