--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/config": "^10.0.0",
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.2",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.11",
