--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EXPO_PUBLIC_API_KEY=http://localhost:3000
+EXPO_PUBLIC_API_KEY=https://decluttakingsever-vcs7.onrender.com
+
 # https://decluttakingsever.onrender.com
 # http://localhost:3000
 CLIENT_ID=850314571191-tba9n0iea4el6d7o4ic6v4u93gnpudh7.apps.googleusercontent.com
